drupal/sites/all/themes/tp4/css/styles.css
/* ... */
/* line 146, ../sass/page/_layout.scss */
#main #skinny {
  float: left;
  width: 100%;
  margin-left: 0%;
  margin-right: -100%;
  padding-left: 10px;
  padding-right: 10px;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -ms-box-sizing: border-box;
  box-sizing: border-box;
  word-wrap: break-word;
  clear: left;
}
@media all and (min-width: 768px) {
  /* line 146, ../sass/page/_layout.scss */
  #main #skinny {
    float: left;
    width: 41.66667%;
    margin-left: 58.33333%;
    margin-right: -100%;
    padding-left: 10px;
    padding-right: 10px;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -ms-box-sizing: border-box;
    box-sizing: border-box;
    word-wrap: break-word;
  }
}
@media all and (min-width: 980px) {
  /* line 146, ../sass/page/_layout.scss */
  #main #skinny {
    float: left;
    width: 16.66667%;
    margin-left: 83.33333%;
    margin-right: -100%;
    padding-left: 10px;
    padding-right: 10px;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -ms-box-sizing: border-box;
    box-sizing: border-box;
    word-wrap: break-word;
    clear: none;
  }
}
@media all and (min-width: 768px) {
  /* line 158, ../sass/page/_layout.scss */
  #main.with-sidebar #skinny {
    float: left;
    width: 100%;
    margin-left: 0%;
    margin-right: -100%;
    padding-left: 10px;
    padding-right: 10px;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -ms-box-sizing: border-box;
    box-sizing: border-box;
    word-wrap: break-word;
  }
}
@media all and (min-width: 980px) {
  /* line 158, ../sass/page/_layout.scss */
  #main.with-sidebar #skinny {
    float: left;
    width: 16.66667%;
    margin-left: 50%;
    margin-right: -66.66667%;
    padding-left: 10px;
    padding-right: 10px;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -ms-box-sizing: border-box;
    box-sizing: border-box;
    word-wrap: break-word;
    padding-left: 15px;
    padding-right: 15px;
  }
}

/* line 6, ../sass/page/_homepage.scss */
body.front img {
  max-width: 100% !important;
  height: auto !important;
}
/* line 12, ../sass/page/_homepage.scss */
body.front #sidebar .block-title {
  border-top: 4px solid #000;
  padding-top: 5px;
}

/* line 25, ../sass/page/_homepage.scss */
.panel-takepart-homepage .panel-panel {
  overflow: hidden;
}
@media all and (min-width: 768px) {
  /* line 31, ../sass/page/_homepage.scss */
  .panel-takepart-homepage .panel-secondary-featured .panel-pane,
  .panel-takepart-homepage .panel-tpl-secondary-featured .panel-pane {
    float: left;
    width: 48.5596708%;
  }
  /* line 35, ../sass/page/_homepage.scss */
  .panel-takepart-homepage .panel-secondary-featured .panel-pane:nth-child(2n+1),
  .panel-takepart-homepage .panel-tpl-secondary-featured .panel-pane:nth-child(2n+1) {
    margin-right: 2.7806584%;
    clear: left;
  }
}
/* line 47, ../sass/page/_homepage.scss */
.panel-takepart-homepage .field-name-field-article-main-image img {
  vertical-align: bottom;
}
/* line 52, ../sass/page/_homepage.scss */
.panel-takepart-homepage .node-title a {
  color: black;
}
/* line 59, ../sass/page/_homepage.scss */
.panel-takepart-homepage .panel-main-featured .pane-node .pane-title {
  position: relative;
  background-color: white;
  margin: -1em .5em 1px;
  padding: .5em .5em 0;
  font-size: 2em;
  line-height: 1.333333333;
  font-weight: normal;
}
/* line 69, ../sass/page/_homepage.scss */
.panel-takepart-homepage .panel-main-featured .pane-node .field-name-field-article-subhead {
  font-size: 1em;
  line-height: 1.285714286;
  font-weight: normal;
}
/* line 75, ../sass/page/_homepage.scss */
.panel-takepart-homepage .panel-main-featured .pane-node .byline {
  margin: 0 2em 1em;
}
/* line 79, ../sass/page/_homepage.scss */
.panel-takepart-homepage .panel-main-featured .pane-node .entry-content {
  margin: 0 2em 1em;
  border-bottom: 1px solid #cccccc;
}
/* line 83, ../sass/page/_homepage.scss */
.panel-takepart-homepage .panel-main-featured .pane-node .entry-content .field {
  margin-bottom: .7em;
}
/* line 87, ../sass/page/_homepage.scss */
.panel-takepart-homepage .panel-main-featured .pane-node .entry-content .field-name-field-tab-action-override .field-item {
  position: relative;
  padding-left: 1.5em;
  margin-bottom: 1em;
}
/* line 92, ../sass/page/_homepage.scss */
.panel-takepart-homepage .panel-main-featured .pane-node .entry-content .field-name-field-tab-action-override .field-item:before {
  content: "\23E9";
  font-family: "SSGizmo";
  line-height: 1.75;
  color: #019f84;
  display: block;
  position: absolute;
  top: 0;
  left: 0;
}
/* line 103, ../sass/page/_homepage.scss */
.panel-takepart-homepage .panel-main-featured .pane-node .entry-content .field-name-field-tab-action-override .field-item a {
  color: black;
}
/* line 106, ../sass/page/_homepage.scss */
.panel-takepart-homepage .panel-main-featured .pane-node .entry-content .field-name-field-tab-action-override .field-item a:before {
  content: "take action:\0020";
  font-family: "BrownRegular", verdana, sans-serif;
}
/* line 111, ../sass/page/_homepage.scss */
.panel-takepart-homepage .panel-main-featured .pane-node .entry-content .field-name-field-tab-action-override .field-item a:hover, .panel-takepart-homepage .panel-main-featured .pane-node .entry-content .field-name-field-tab-action-override .field-item a:active {
  color: #01bf9e;
}
/* line 120, ../sass/page/_homepage.scss */
.panel-takepart-homepage .node.view-mode-feature-secondary {
  margin-bottom: 1em;
}
/* line 121, ../sass/page/_homepage.scss */
.panel-takepart-homepage .node.view-mode-feature-secondary .node-title {
  font-size: 1.142857143em;
  line-height: 1.25;
  margin-top: .5em;
  font-weight: normal;
}
/* line 130, ../sass/page/_homepage.scss */
.panel-takepart-homepage .tpl-headline {
  border-top: 4px solid #00b5cc;
  border-bottom: 4px solid #00b5cc;
  margin: 0 0 1em;
  padding: 0;
  height: 60px;
}
/* ... */

